assignment1/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'::'", "'String'", "'New'", 
                     "'Return'", "'='", "'Break'", "'Continue'", "'If'", 
                     "'Else'", "'Elseif'", "'Foreach'", "'In'", "'Constructor'", 
                     "'Destructor'", "'Class'", "<INVALID>", "'By'", "<INVALID>", 
                     "<INVALID>", "'Array'", "'Int'", "'Float'", "'Boolean'", 
                     "<INVALID>", "'00'", "'0'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "','", "'['", "']'", "'('", "')'", 
                     "'{'", "'}'", "'..'", "':'", "';'", "'+'", "'<='", 
                     "'>='", "'-'", "'*'", "'<'", "'%'", "'/'", "'!='", 
                     "'=='", "'>'", "'&&'", "'||'", "'!'", "'==.'", "'+.'" ]

    symbolicNames = [ "<INVALID>", "STRINGLIT", "MEM_ACCESS_OP", "STRING_TYPE", 
                      "NEW", "RETURN", "ASSIGN_OP", "BREAK", "CONTINUE", 
                      "IF", "ELSE", "ELSEIF", "FOREACH", "IN", "CONSTRUCTOR", 
                      "DESTRUCTOR", "CLASS", "FLOATLIT", "BY", "BOOLIT", 
                      "VAL_VAR", "ARRAY", "INT_TYPE", "FLOAT_TYPE", "BOOL_TYPE", 
                      "ZERO_2", "ZERO_8", "ZERO_10", "ZERO_16", "INTLIT_16", 
                      "INTLIT_2", "INTLIT_8", "INTLIT_10", "DOLLAR_ID", 
                      "ID", "DOT", "CM", "LS", "RS", "LB", "RB", "LP", "RP", 
                      "RANGE", "CL", "SEMI", "ADDOP", "LESS_EQUAL", "GREAT_EQUAL", 
                      "SUBOP", "MULOP", "LESS_THAN", "MODOP", "DIVOP", "NOT_EQUAL", 
                      "EQUAL", "GREAT_THAN", "AND", "OR", "NEGATE", "STR_CMP", 
                      "STR_CONCAT", "COMMENT", "WS", "ILLEGAL_ESCAPE", "UNCLOSED_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_dcl = 1
    RULE_class_body = 2
    RULE_expr_pro = 3
    RULE_att_dcl = 4
    RULE_att_dcl_list = 5
    RULE_method_dcl = 6
    RULE_para_dcl_list = 7
    RULE_para_dcl_smcllist = 8
    RULE_para_dcl = 9
    RULE_stm = 10
    RULE_for_in_stm = 11
    RULE_if_stm = 12
    RULE_block_stm = 13
    RULE_mn_stm = 14
    RULE_continue_stm = 15
    RULE_break_stm = 16
    RULE_asm_stm = 17
    RULE_return_stm = 18
    RULE_method_invoke_stm = 19
    RULE_var_dcl = 20
    RULE_var_dcl_list = 21
    RULE_expr_pro_list = 22
    RULE_expr_pro_cmlist = 23
    RULE_expr = 24
    RULE_expr_lit = 25
    RULE_object_ini = 26
    RULE_instance_method_invoke = 27
    RULE_static_mehod_invoke = 28
    RULE_para_pass_list = 29
    RULE_att_access = 30
    RULE_instance_att_access = 31
    RULE_static_att_access = 32
    RULE_index_ele_pro = 33
    RULE_index_ele = 34
    RULE_int_object = 35
    RULE_float_object = 36
    RULE_index_arr_list = 37
    RULE_index_arr_cmlist = 38
    RULE_index_arr = 39
    RULE_mul_dim_arr = 40
    RULE_same_type_list = 41
    RULE_string_op = 42
    RULE_bool_op = 43
    RULE_relation_op = 44
    RULE_int_op = 45
    RULE_float_op = 46
    RULE_lit_list = 47
    RULE_lit_cmlist = 48
    RULE_id_list = 49
    RULE_id_cmlist = 50
    RULE_int_gen_list = 51
    RULE_int_gen_cm = 52
    RULE_bool_list = 53
    RULE_bool_list_cm = 54
    RULE_float_list = 55
    RULE_float_list_cm = 56
    RULE_string_list = 57
    RULE_string_list_cm = 58
    RULE_lit = 59
    RULE_int_gen = 60
    RULE_data_type = 61
    RULE_size = 62
    RULE_array_type = 63
    RULE_unary_op = 64
    RULE_binary_op = 65
    RULE_zero = 66

    ruleNames =  [ "program", "class_dcl", "class_body", "expr_pro", "att_dcl", 
                   "att_dcl_list", "method_dcl", "para_dcl_list", "para_dcl_smcllist", 
                   "para_dcl", "stm", "for_in_stm", "if_stm", "block_stm", 
                   "mn_stm", "continue_stm", "break_stm", "asm_stm", "return_stm", 
                   "method_invoke_stm", "var_dcl", "var_dcl_list", "expr_pro_list", 
                   "expr_pro_cmlist", "expr", "expr_lit", "object_ini", 
                   "instance_method_invoke", "static_mehod_invoke", "para_pass_list", 
                   "att_access", "instance_att_access", "static_att_access", 
                   "index_ele_pro", "index_ele", "int_object", "float_object", 
                   "index_arr_list", "index_arr_cmlist", "index_arr", "mul_dim_arr", 
                   "same_type_list", "string_op", "bool_op", "relation_op", 
                   "int_op", "float_op", "lit_list", "lit_cmlist", "id_list", 
                   "id_cmlist", "int_gen_list", "int_gen_cm", "bool_list", 
                   "bool_list_cm", "float_list", "float_list_cm", "string_list", 
                   "string_list_cm", "lit", "int_gen", "data_type", "size", 
                   "array_type", "unary_op", "binary_op", "zero" ]

    EOF = Token.EOF
    STRINGLIT=1
    MEM_ACCESS_OP=2
    STRING_TYPE=3
    NEW=4
    RETURN=5
    ASSIGN_OP=6
    BREAK=7
    CONTINUE=8
    IF=9
    ELSE=10
    ELSEIF=11
    FOREACH=12
    IN=13
    CONSTRUCTOR=14
    DESTRUCTOR=15
    CLASS=16
    FLOATLIT=17
    BY=18
    BOOLIT=19
    VAL_VAR=20
    ARRAY=21
    INT_TYPE=22
    FLOAT_TYPE=23
    BOOL_TYPE=24
    ZERO_2=25
    ZERO_8=26
    ZERO_10=27
    ZERO_16=28
    INTLIT_16=29
    INTLIT_2=30
    INTLIT_8=31
    INTLIT_10=32
    DOLLAR_ID=33
    ID=34
    DOT=35
    CM=36
    LS=37
    RS=38
    LB=39
    RB=40
    LP=41
    RP=42
    RANGE=43
    CL=44
    SEMI=45
    ADDOP=46
    LESS_EQUAL=47
    GREAT_EQUAL=48
    SUBOP=49
    MULOP=50
    LESS_THAN=51
    MODOP=52
    DIVOP=53
    NOT_EQUAL=54
    EQUAL=55
    GREAT_THAN=56
    AND=57
    OR=58
    NEGATE=59
    STR_CMP=60
    STR_CONCAT=61
    COMMENT=62
    WS=63
    ILLEGAL_ESCAPE=64
    UNCLOSED_STRING=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_dclContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_dclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.class_dcl()
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 139
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def class_body(self):
            return self.getTypedRuleContext(D96Parser.Class_bodyContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_dcl" ):
                return visitor.visitClass_dcl(self)
            else:
                return visitor.visitChildren(self)




    def class_dcl(self):

        localctx = D96Parser.Class_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(D96Parser.CLASS)
            self.state = 142
            self.match(D96Parser.ID)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.CL:
                self.state = 143
                self.match(D96Parser.CL)
                self.state = 144
                self.id_list()


            self.state = 147
            self.class_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def att_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Att_dclContext)
            else:
                return self.getTypedRuleContext(D96Parser.Att_dclContext,i)


        def method_dcl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Method_dclContext)
            else:
                return self.getTypedRuleContext(D96Parser.Method_dclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body" ):
                return visitor.visitClass_body(self)
            else:
                return visitor.visitChildren(self)




    def class_body(self):

        localctx = D96Parser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(D96Parser.LP)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.VAL_VAR) | (1 << D96Parser.DOLLAR_ID) | (1 << D96Parser.ID))) != 0):
                self.state = 152
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D96Parser.VAL_VAR]:
                    self.state = 150
                    self.att_dcl()
                    pass
                elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.DOLLAR_ID, D96Parser.ID]:
                    self.state = 151
                    self.method_dcl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_proContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def index_ele(self):
            return self.getTypedRuleContext(D96Parser.Index_eleContext,0)


        def index_ele_pro(self):
            return self.getTypedRuleContext(D96Parser.Index_ele_proContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_expr_pro

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_pro" ):
                return visitor.visitExpr_pro(self)
            else:
                return visitor.visitChildren(self)




    def expr_pro(self):

        localctx = D96Parser.Expr_proContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr_pro)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.index_ele()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.index_ele_pro()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL_VAR(self):
            return self.getToken(D96Parser.VAL_VAR, 0)

        def id_list(self):
            return self.getTypedRuleContext(D96Parser.Id_listContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def att_dcl_list(self):
            return self.getTypedRuleContext(D96Parser.Att_dcl_listContext,0)


        def expr_pro(self):
            return self.getTypedRuleContext(D96Parser.Expr_proContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtt_dcl" ):
                return visitor.visitAtt_dcl(self)
            else:
                return visitor.visitChildren(self)




    def att_dcl(self):

        localctx = D96Parser.Att_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_att_dcl)
        self._la = 0 # Token type
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(D96Parser.VAL_VAR)
                self.state = 165
                self.id_list()
                self.state = 166
                self.match(D96Parser.CL)
                self.state = 167
                self.data_type()
                self.state = 168
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.match(D96Parser.VAL_VAR)
                self.state = 171
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLAR_ID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 172
                self.att_dcl_list()
                self.state = 173
                self.expr_pro()
                self.state = 174
                self.match(D96Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_dcl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def ASSIGN_OP(self):
            return self.getToken(D96Parser.ASSIGN_OP, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def att_dcl_list(self):
            return self.getTypedRuleContext(D96Parser.Att_dcl_listContext,0)


        def expr_pro(self):
            return self.getTypedRuleContext(D96Parser.Expr_proContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_dcl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtt_dcl_list" ):
                return visitor.visitAtt_dcl_list(self)
            else:
                return visitor.visitChildren(self)




    def att_dcl_list(self):

        localctx = D96Parser.Att_dcl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_att_dcl_list)
        self._la = 0 # Token type
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(D96Parser.CL)
                self.state = 179
                self.data_type()
                self.state = 180
                self.match(D96Parser.ASSIGN_OP)
                pass
            elif token in [D96Parser.CM]:
                self.enterOuterAlt(localctx, 2)
                self.state = 182
                self.match(D96Parser.CM)
                self.state = 183
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLAR_ID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 184
                self.att_dcl_list()
                self.state = 185
                self.expr_pro()
                self.state = 186
                self.match(D96Parser.CM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_dclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def para_dcl_list(self):
            return self.getTypedRuleContext(D96Parser.Para_dcl_listContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stm(self):
            return self.getTypedRuleContext(D96Parser.Block_stmContext,0)


        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_method_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_dcl" ):
                return visitor.visitMethod_dcl(self)
            else:
                return visitor.visitChildren(self)




    def method_dcl(self):

        localctx = D96Parser.Method_dclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method_dcl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.DOLLAR_ID) | (1 << D96Parser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 191
            self.match(D96Parser.LB)
            self.state = 192
            self.para_dcl_list()
            self.state = 193
            self.match(D96Parser.RB)
            self.state = 194
            self.block_stm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_dcl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_dcl(self):
            return self.getTypedRuleContext(D96Parser.Para_dclContext,0)


        def para_dcl_smcllist(self):
            return self.getTypedRuleContext(D96Parser.Para_dcl_smcllistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_para_dcl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_dcl_list" ):
                return visitor.visitPara_dcl_list(self)
            else:
                return visitor.visitChildren(self)




    def para_dcl_list(self):

        localctx = D96Parser.Para_dcl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_dcl_list)
        try:
            self.state = 200
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.RB]:
                self.enterOuterAlt(localctx, 1)
